# gdrive-folder-copy

./: LICENSE  README.md  setup.cfg  setup.py
gdfc/: auth_utils.py  cli.py  copy_folder.py  gdrive_client.py  log_utils.py
