[metadata]
name = gdfc
description = "gdfc is an utility to copy a full gdrive folder to another location on gdrive using gdrive api v3."
long_description = file: README.md
license = MIT
author = Tanguy Le Floch
provides = gdfc
url = https://github.com/TanguyLe/gdrive-folder-copy
download_url =
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7

[options]
zip_safe = False
python_requires "~=3.7.0,>=3.7.0"
packages = find:
include_package_data = True
install_requires =
    google-api-python-client~=1.12.0
    google-auth-httplib2~=0.0.4
    google-auth-oauthlib~=0.4.2
    typer~=0.3.2

[options.extras_require]
tests =
	pytest~=6.0.0
	pytest-mock~=3.2.0
	requests-mock~=1.8.0
dev =

[options.entry_points]
console_scripts =
  	gdfc = gdfc.cli:app

[options.package_data]
* = py.typed

[options.packages.find]
exclude = tests

[bdist_wheel]
universal = 1
